--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Bachelor of Technology, Electronics & Communications
+  uni: SATI Vidisha Bhopal Madhya Pradesh Bharat
+  year: 2017 &mdash; 2021
+  # awards:
+  #   - award: Summa Cumme Laude graduate
+  # summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: HSSC & SSC in Science
+  uni: Higher Secondary School
+  year: 2013 &mdash; 2015
+  # award: Most likely to succeed
+  # summary: You can choose to have either a single or multiple awards
