--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,6 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: QT Software Developed 
+- description: Embedded Software Developed
+- description: QT Automotive Cluster UI Developed
+- description: Music
+- description: Movies
