--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,11 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://linktr.ee/techcoderhub"
+  description: Social Channels
+- url: "https://www.youtube.com/@techcoderhub"
+  description: Youtube For Personal Projects
+- url: "https://github.com/cppqtdev"
+  description: Project Works
+- url: "https://yo.fan/techcoderhub"
+  description: Personal Project UI
+- url: "https://adeshsingh.gitbook.io/"
+  description: Personal Blog
