--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
 - skill: Software Development Skills
-  description: C / C++ Programming, QT / QML, QT Device Creation ,Python Programming, IOT Embedded Software Development, Data Structure.
+  description: <ul class="resume-item-list"><li> C / C++ Programming</li><li> QT / QML</li><li> QT Device Creation</li><li> Data Structure</li><li> IOT Embedded Firmware Development</li></ul>
 
 # Communications strategy
 - skill: Tools & IDEs
