--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ resume_title:                   "QT Software Developer"
 resume_contact_email:           "adeshworkmail@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "+91 8305516312"
+# resume_contact_telephone:       "+91 8305516312"
 resume_contact_address:         "IMT Manesar Gurugram Haryana Bharat"
 
 resume_header_contact_info:     "IMT Manesar Gurugram Haryana Bharat • +91 8305516312 • adeshworkmail@gmail.com"
