--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ resume_contact_email:           "adeshworkmail@gmail.com"
 # resume_contact_telephone:       "+91 8305516312"
 resume_contact_address:         "IMT Manesar Gurugram Haryana Bharat"
 
-resume_header_contact_info:     "IMT Manesar Gurugram Haryana Bharat • +91 8305516312 • adeshworkmail@gmail.com"
+resume_header_contact_info:     "IMT Manesar Gurugram Haryana Bharat • adeshworkmail@gmail.com"
 display_header_contact_info:    "true"
 
 resume_header_intro: "<p>I am currently working as QT software developer. I am a Developer with an interest in learning new things and technologies. Also has knowledge on data structures, Embedded Software , QT QML UI development for Embedded as well as desktop and Object-Oriented Programming.</p>"
